update img link

--- a/views/index.mustache
+++ b/views/index.mustache
@@ -79,7 +79,7 @@
         <!--========== END HEADER ==========-->
 
         <!--========== SLIDER ==========-->
-        <div class="promo-block parallax-window" data-parallax="scroll" data-image-src="img/1920x1080/01.jpg">
+        <div class="promo-block parallax-window" data-parallax="scroll" data-image-src="https://lh3.googleusercontent.com/mbcdtRxKR2JnmcB-cRZBV_xlbizFCXIfl2FQI7ztIIgoprnjyp6BKdlomwFt8PuY6j00c5g5twQyfs5K-7katBXK6g">
             <div class="container">
                 <div class="row">
                     <div class="col-sm-6">
