--- a/views/index.mustache
+++ b/views/index.mustache
@@ -33,8 +33,8 @@
                         <!-- Logo -->
                         <div class="logo">
                             <a class="logo-wrap" href="#body">
-                                <img class="logo-img logo-img-main" src="{{page.global.logo1}}" alt="Asentus Logo">
-                                <img class="logo-img logo-img-active" src="{{page.global.logo2}}" alt="Asentus Logo">
+                                <img class="logo-img logo-img-main" src="{{{page.global.logo1}}}" alt="Asentus Logo">
+                                <img class="logo-img logo-img-active" src="{{{page.global.logo2}}}" alt="Asentus Logo">
                             </a>
                         </div>
                         <!-- End Logo -->
@@ -58,7 +58,7 @@
         <!--========== END HEADER ==========-->
 
         <!--========== SLIDER ==========-->
-        <div class="promo-block parallax-window" data-parallax="scroll" data-image-src="{{page.hero.img}}">
+        <div class="promo-block parallax-window" data-parallax="scroll" data-image-src="{{{page.hero.img}}}">
             <div class="container">
                 <div class="row">
                     <div class="col-sm-6">
@@ -169,7 +169,7 @@
 									<!-- Work -->
 									<div class="work work-popup-trigger">
 										<div class="work-overlay">
-											<img class="full-width img-responsive" src="{{img}}" alt="Portfolio Image">
+											<img class="full-width img-responsive" src="{{{img}}}" alt="Portfolio Image">
 										</div>
 										<div class="work-popup-overlay">
 											<div class="work-popup-content">
@@ -247,7 +247,7 @@
             <div class="content container">
                 <div class="row">
                     <div class="col-xs-6">
-                        <img class="footer-logo" src="{{page.global.logo2}}" alt="Aircv Logo">
+                        <img class="footer-logo" src="{{{page.global.logo2}}}" alt="Aircv Logo">
                     </div>
                     <div class="col-xs-6 text-right sm-text-left">
                         <p class="margin-b-0"><a class="fweight-700" href="http://keenthemes.com/preview/aircv/">Aircv</a> Theme Powered by: <a class="fweight-700" href="http://www.keenthemes.com/">KeenThemes.com</a></p>
