--- a/views/home.mustache
+++ b/views/home.mustache
@@ -1,69 +1,288 @@
 <!DOCTYPE html>
-<html dir="ltr" lang="en-US">
-<head>
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-</head>
+<!-- ==============================
+    Project:        Metronic "Aircv" Frontend Freebie - Responsive HTML Template Based On Twitter Bootstrap 3.3.4
+    Version:        1.0
+    Author:         KeenThemes
+    Primary use:    Corporate, Business Themes.
+    Email:          support@keenthemes.com
+    Follow:         http://www.twitter.com/keenthemes
+    Like:           http://www.facebook.com/keenthemes
+    Website:        http://www.keenthemes.com
+    Premium:        Premium Metronic Admin Theme: http://themeforest.net/item/metronic-responsive-admin-dashboard-template/4021469?ref=keenthemes
+================================== -->
+<html lang="en" class="no-js">
+    <!-- BEGIN HEAD -->
+    {{>head}}
+    <!-- END HEAD -->
 
-<body class="container">
-	<div class="row">
+    <!-- BODY -->
+    <body id="body" data-spy="scroll" data-target=".header">
 
-		<div class="col-md-6 col-md-offset-3" style="text-align:center;margin-bottom:48px">
-			<h1>Welcome to Vertex 360</h1>
-			<hr />
-			<div style="background:#f9f9f9;border:1px solid #ddd;border-radius:3px;padding:12px">
-				You are currently looking at the <strong style="color:red">home.mustache</strong> file in the 'views' directory of your project. This template is rendered with the Mustache templating engine. <h4 style="color:red">{{page.text}}</h4>
-			</div>
+        <!--========== HEADER ==========-->
+        <header class="header navbar-fixed-top">
+            <!-- Navbar -->
+            <nav class="navbar" role="navigation">
+                <div class="container">
+                    <!-- Brand and toggle get grouped for better mobile display -->
+                    <div class="menu-container js_nav-item">
+                        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".nav-collapse">
+                            <span class="sr-only">Toggle navigation</span>
+                            <span class="toggle-icon"></span>
+                        </button>
 
-			<h3 style="margin-top:48px">Routes</h3>
-			<hr />
-			<p>
-				The routes are stored in the 'routes' directory. This scaffold comes with two sample routes out of the box: index and api. To test each route, click the following links:
-			</p>
+                        <!-- Logo -->
+                        <div class="logo">
+                            <a class="logo-wrap" href="#body">
+                                <img class="logo-img logo-img-main" src="{{{page.global.logo1}}}" alt="Asentus Logo">
+                                <img class="logo-img logo-img-active" src="{{{page.global.logo2}}}" alt="Asentus Logo">
+                            </a>
+                        </div>
+                        <!-- End Logo -->
+                    </div>
 
-			<div class="row">
-				<div class="col-md-6 col-md-offset-0">
-					<div style="text-align:left;background:#f9f9f9;border:1px solid #ddd;border-radius:3px;padding:12px">
-						<h4>Index Route</h4>
-						<ul style="padding-left:16px">
-							<li><a href="/json">JSON Response</a></li>
-							<li><a href="/send">Text Response</a></li>
-							<li><a href="/redirect">Redirect</a></li>
-						</ul>
-					</div>
-				</div>
+                    <!-- Collect the nav links, forms, and other content for toggling -->
+                    <div class="collapse navbar-collapse nav-collapse">
+                        <div class="menu-container">
+                            <ul class="nav navbar-nav navbar-nav-right">
+								{{#page.global.navbar}}
+									<li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="{{href}}">{{text}}</a></li>
+								{{/page.global.navbar}}
+                            </ul>
+                        </div>
+                    </div>
+                    <!-- End Navbar Collapse -->
+                </div>
+            </nav>
+            <!-- Navbar -->
+        </header>
+        <!--========== END HEADER ==========-->
 
-				<div class="col-md-6">
-					<div style="text-align:left;background:#f9f9f9;border:1px solid #ddd;border-radius:3px;padding:12px">
-						<h4>API Route</h4>
-						<ul style="padding-left:16px;">
-							<li><a href="/api/profile">Resource Request</a></li>
-							<li><a href="/api/profile?team=cavaliers">With Query Params</a></li>
-							<li><a href="/api/profile/lebron_james">With ID</a></li>
-						</ul>
-					</div>
-				</div>
-			</div>
+        <!--========== SLIDER ==========-->
+        <div class="promo-block parallax-window" data-parallax="scroll" data-image-src="{{{page.hero.img}}}">
+            <div class="container">
+                <div class="row">
+                    <div class="col-sm-6">
+                        <div class="promo-block-divider">
+                            <h1 class="promo-block-title">{{page.hero.fname}} <br/> {{page.hero.lname}}</h1>
+                            <p class="promo-block-text">{{page.hero.work}} &amp; {{page.hero.work2}}</p>
+                        </div>
+                        <ul class="list-inline">
+							{{#page.hero.icons}}
+                           		<li><a href="#" class="social-icons"><i class="{{icon}}"></i></a></li>
+							{{/page.hero.icons}}
+                        </ul>
+                    </div>
+                </div>
+                <!--// end row -->
+            </div>
+        </div>
+        <!--========== SLIDER ==========-->
 
-			<h3 style="margin-top:48px">Deployment</h3>
-			<hr />
-			<p>
-				To deploy, connect the project to a Vertex 360 project using the APP_ID (from root directory):
-<pre style="text-align:left;margin-top:8px;background:#333;color:#fff">
-<code>$ turbo app APP_ID</code>
-</pre>
+        <!--========== PAGE LAYOUT ==========-->
+        <!-- About -->
+        <div id="about">
+            <div class="container content-lg">
+                <div class="row">
+                    <div class="col-sm-3 sm-margin-b-30">
+                        <div class="text-right sm-text-left">
+                            <h2 class="margin-b-0">{{page.section1.title}}</h2>
+                            <p>{{page.section1.sub}}</p>
+                        </div>
+                    </div>
+                    <div class="col-sm-8 col-sm-offset-1">
+                        <div class="margin-b-60">
+                            <p>{{page.section1.desc}}</p>
+                            <p>{{page.section1.desc2}}</p>
+                        </div>
 
-				Then deploy by simply entering the deploy command:
-<pre style="text-align:left;margin-top:8px;background:#333;color:#fff">
-<code>$ turbo deploy</code>
-</pre>
+                        <!-- Progress Box -->
+						{{#page.section1.progress}}
+							<div class="progress-box">
+								<h5>{{text}} <span class="color-heading pull-right">{{num}}</span></h5>
+								<div class="progress">
+									<div class="progress-bar bg-color-base" role="progressbar" data-width="{{width}}"></div>
+								</div>
+                        	</div>
+						{{/page.section1.progress}}
+                        <!-- End Progress Box -->
+                    </div>
+                </div>
+                <!--// end row -->
+            </div>
+        </div>
+        <!-- End About -->
 
-				When deployment is complete, you will see a live link where you can access the project on the internet!
-			</p>
+        <!-- Experience -->
+        <div id="experience">
+            <div class="bg-color-sky-light" data-auto-height="true">
+                <div class="container content-lg">
+                    <div class="row">
+                        <div class="col-sm-3 sm-margin-b-30">
+                            <div class="text-right sm-text-left">
+                                <h2 class="margin-b-0">{{page.section2.title}}</h2>
+                                <p>{{page.section2.desc}}</p>
+                            </div>
+                        </div>
+                        <div class="col-sm-8 col-sm-offset-1">
+                            <div class="row row-space-2 margin-b-4">
+								{{#page.section2.explist}}
+									<div class="col-md-4 md-margin-b-4">
+										<div class="{{class1}}" data-height="height"  data-wow-duration="{{dur}}" data-wow-delay="{{delay}}">
+											<div class="service-element">
+												<i class="{{class2}}"></i>
+											</div>
+											<div class="service-info">
+												<h3 class="{{class4}}">{{text}}</h3>
+												<p class="{{class3}}">{{sub}}</p>
+											</div>
+											<a href="#" class="content-wrapper-link"></a>    
+										</div>
+									</div>
+								{{/page.section2.explist}}
+                            </div>
+                            <!--// end row -->
+                        </div>
+                    </div>
+                    <!--// end row -->
+                </div>
+            </div>
+        </div>
+        <!-- End Experience -->
 
-		</div>
-	</div>
+        <!-- Work -->
+        <div id="work">
+            <div class="container content-lg">
+                <div class="row">
+                    <div class="col-sm-3 sm-margin-b-30">
+                        <div class="text-right sm-text-left">
+                            <h2 class="margin-b-0">{{page.section3.title}}</h2>
+                            <p>{{page.section3.sub}}</p>
+                        </div>
+                    </div>
+                    <div class="col-sm-8 col-sm-offset-1">
+                        <!-- Masonry Grid -->
+                        <div class="masonry-grid row row-space-2">
+                            <div class="masonry-grid-sizer col-xs-6 col-sm-6 col-md-1"></div>
 
-  <!-- Vertex library for enabling site updates from https://www.vertex360.co -->
-  <script type="text/javascript" src="https://cdn.turbo360-dev.com/dist/vertex.min.js"></script>
-</body>
+							{{#projects}}
+								<div class="{{class}}">
+									<!-- Work -->
+									<div class="work work-popup-trigger">
+										<div class="work-overlay">
+											<img class="full-width img-responsive" src="{{{image}}}=s220" alt="Portfolio Image">
+										</div>
+										<div class="work-popup-overlay">
+											<div class="work-popup-content">
+												<a href="javascript:void(0);" class="work-popup-close">{{menu}}</a>
+												<div class="margin-b-30">
+													<h3 class="margin-b-5">{{name}}</h3>
+													<span>{{sub}}</span>
+												</div>
+												<div class="row">
+													<div class="col-sm-8 work-popup-content-divider sm-margin-b-20">
+														<div class="margin-t-10 sm-margin-t-0">
+															<p>{{description}}</p>
+															<p>{{desc2}}</p>
+															<ul class="list-inline work-popup-tag">
+																{{#tag}}
+																	<li class="work-popup-tag-item"><a class="work-popup-tag-link" href="#">{{text}}</a></li>
+																{{/tag}}
+															</ul>
+														</div>
+													</div>
+													<div class="col-sm-4">
+														<div class="margin-t-10 sm-margin-t-0">
+															{{#exp}}
+																<p class="margin-b-5"><strong>{{pos}}</strong> {{name}}</p>
+															{{/exp}}
+														</div>
+													</div>
+												</div>
+											</div>
+										</div>
+									</div>
+									<!-- End Work -->
+								</div>
+							{{/projects}}
+                        </div>
+                        <!-- End Masonry Grid -->
+                    </div>
+                </div>
+                <!--// end row -->
+            </div>
+        </div>
+        <!-- End Work -->
+            
+        <!-- Contact -->
+        <div id="contact">
+            <div class="bg-color-sky-light">
+                <div class="container content-lg">
+                    <div class="row">
+                        <div class="col-sm-3 sm-margin-b-30">
+                            <div class="text-right sm-text-left">
+                                <h2 class="margin-b-0">{{page.section4.title}}</h2>
+                                <p>{{page.section4.sub}}</p>
+                            </div>
+                        </div>
+                        <div class="col-sm-8 col-sm-offset-1">
+                            <div class="row">
+								{{#page.section4.list}}
+									<div class="{{class}}">
+										<h5>{{text}}</h5>
+										<a href="{{href}}">{{link}}</a>
+									</div>
+								{{/page.section4.list}}
+                            </div>
+                        </div>
+                    </div>
+                    <!--// end row -->
+                </div>
+            </div>
+        </div>
+        <!-- End Contact -->
+        <!--========== END PAGE LAYOUT ==========-->
+
+        <!--========== FOOTER ==========-->
+        <footer class="footer">
+            <div class="content container">
+                <div class="row">
+                    <div class="col-xs-6">
+                        <img class="footer-logo" src="{{{page.global.logo2}}}" alt="Aircv Logo">
+                    </div>
+                    <div class="col-xs-6 text-right sm-text-left">
+                        <p class="margin-b-0"><a class="fweight-700" href="http://keenthemes.com/preview/aircv/">Aircv</a> Theme Powered by: <a class="fweight-700" href="http://www.keenthemes.com/">KeenThemes.com</a></p>
+                    </div>
+                </div>
+                <!--// end row -->
+            </div>
+        </footer>
+        <!--========== END FOOTER ==========-->
+
+        <!-- Back To Top -->
+        <a href="javascript:void(0);" class="js-back-to-top back-to-top">Top</a>
+
+        <!-- JAVASCRIPTS(Load javascripts at bottom, this will reduce page load time) -->
+        <!-- CORE PLUGINS -->
+        <script src="vendor/jquery.min.js" type="text/javascript"></script>
+        <script src="vendor/jquery-migrate.min.js" type="text/javascript"></script>
+        <script src="vendor/bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
+
+        <!-- PAGE LEVEL PLUGINS -->
+        <script src="vendor/jquery.easing.js" type="text/javascript"></script>
+        <script src="vendor/jquery.back-to-top.js" type="text/javascript"></script>
+        <script src="vendor/jquery.smooth-scroll.js" type="text/javascript"></script>
+        <script src="vendor/jquery.wow.min.js" type="text/javascript"></script>
+        <script src="vendor/jquery.parallax.min.js" type="text/javascript"></script>
+        <script src="vendor/jquery.appear.js" type="text/javascript"></script>
+        <script src="vendor/masonry/jquery.masonry.pkgd.min.js" type="text/javascript"></script>
+        <script src="vendor/masonry/imagesloaded.pkgd.min.js" type="text/javascript"></script>
+
+        <!-- PAGE LEVEL SCRIPTS -->
+        <script src="js/layout.min.js" type="text/javascript"></script>
+        <script src="js/components/progress-bar.min.js" type="text/javascript"></script>
+        <script src="js/components/masonry.min.js" type="text/javascript"></script>
+        <script src="js/components/wow.min.js" type="text/javascript"></script>
+
+    </body>
+    <!-- END BODY -->
 </html>
