--- a/views/home.mustache
+++ b/views/home.mustache
@@ -33,8 +33,8 @@
                         <!-- Logo -->
                         <div class="logo">
                             <a class="logo-wrap" href="#body">
-                                <img class="logo-img logo-img-main" src="{{{page.global.logo1}}}" alt="Asentus Logo">
-                                <img class="logo-img logo-img-active" src="{{{page.global.logo2}}}" alt="Asentus Logo">
+                                <img class="logo-img logo-img-main" src="{{{global.img_logo_header}}}" alt="Logo">
+                                <img class="logo-img logo-img-active" src="{{{global.img_logo_footer}}}" alt="Logo">
                             </a>
                         </div>
                         <!-- End Logo -->
@@ -44,9 +44,9 @@
                     <div class="collapse navbar-collapse nav-collapse">
                         <div class="menu-container">
                             <ul class="nav navbar-nav navbar-nav-right">
-								{{#page.global.navbar}}
-									<li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="{{href}}">{{text}}</a></li>
-								{{/page.global.navbar}}
+								{{#global.navigation_menu}}
+									<li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="{{url}}">{{text}}</a></li>
+								{{/global.navigation_menu}}
                             </ul>
                         </div>
                     </div>
@@ -58,18 +58,42 @@
         <!--========== END HEADER ==========-->
 
         <!--========== SLIDER ==========-->
-        <div class="promo-block parallax-window" data-parallax="scroll" data-image-src="{{{page.hero.img}}}">
+        <div class="promo-block parallax-window" data-parallax="scroll" data-image-src="{{{global.img_hero_bg}}}">
             <div class="container">
                 <div class="row">
                     <div class="col-sm-6">
                         <div class="promo-block-divider">
-                            <h1 class="promo-block-title">{{page.hero.fname}} <br/> {{page.hero.lname}}</h1>
-                            <p class="promo-block-text">{{page.hero.work}} &amp; {{page.hero.work2}}</p>
+                            <h1 class="promo-block-title">{{global.profile.firstName}} <br/> {{global.hero.lastName}}</h1>
+                            <p class="promo-block-text">{{global.profile.position}}</p>
                         </div>
                         <ul class="list-inline">
-							{{#page.hero.icons}}
-                           		<li><a href="#" class="social-icons"><i class="{{icon}}"></i></a></li>
-							{{/page.hero.icons}}
+							{{#page.social.facebook.show_or_hide}}
+                           		<li><a href="#" class="social-icons"><i class="icon-social-{{page.social.facebook.name}}"></i></a></li>
+							{{/page.social.facebook.show_or_hide}}
+
+                            {{#page.social.twitter.show_or_hide}}
+                           		<li><a href="#" class="social-icons"><i class="icon-social-{{page.social.twitter.name}}"></i></a></li>
+							{{/page.social.twitter.show_or_hide}}
+
+                            {{#page.social.dribbble.show_or_hide}}
+                           		<li><a href="#" class="social-icons"><i class="icon-social-{{page.social.dribbble.name}}"></i></a></li>
+							{{/page.social.dribbble.show_or_hide}}
+
+                            {{#page.social.pinterest.show_or_hide}}
+                           		<li><a href="#" class="social-icons"><i class="icon-social-{{page.social.pinterest.name}}"></i></a></li>
+							{{/page.social.pinterest.show_or_hide}}
+
+                            {{#page.social.linkedin.show_or_hide}}
+                           		<li><a href="#" class="social-icons"><i class="icon-social-{{page.social.linkedin.name}}"></i></a></li>
+							{{/page.social.linkedin.show_or_hide}}
+                            
+                            {{#page.social.youtube.show_or_hide}}
+                           		<li><a href="#" class="social-icons"><i class="icon-social-{{page.social.youtube.name}}"></i></a></li>
+							{{/page.social.youtube.show_or_hide}}
+
+                            {{#page.social.instagram.show_or_hide}}
+                           		<li><a href="#" class="social-icons"><i class="icon-social-{{page.social.instagram.name}}"></i></a></li>
+							{{/page.social.instagram.show_or_hide}}
                         </ul>
                     </div>
                 </div>
@@ -85,25 +109,25 @@
                 <div class="row">
                     <div class="col-sm-3 sm-margin-b-30">
                         <div class="text-right sm-text-left">
-                            <h2 class="margin-b-0">{{page.section1.title}}</h2>
-                            <p>{{page.section1.sub}}</p>
+                            <h2 class="margin-b-0">{{page.intro_section.title}}</h2>
+                            <p>{{page.intro_section.sub}}</p>
                         </div>
                     </div>
                     <div class="col-sm-8 col-sm-offset-1">
                         <div class="margin-b-60">
-                            <p>{{page.section1.desc}}</p>
-                            <p>{{page.section1.desc2}}</p>
+                            <p>{{page.intro_section.description}}</p>
+                            <p>{{page.intro_section.description2}}</p>
                         </div>
 
                         <!-- Progress Box -->
-						{{#page.section1.progress}}
+						{{#page.intro_section.progress_bar}}
 							<div class="progress-box">
-								<h5>{{text}} <span class="color-heading pull-right">{{num}}</span></h5>
+								<h5>{{text}} <span class="color-heading pull-right">{{percent_text}}</span></h5>
 								<div class="progress">
 									<div class="progress-bar bg-color-base" role="progressbar" data-width="{{width}}"></div>
 								</div>
                         	</div>
-						{{/page.section1.progress}}
+						{{/page.intro_section.progress_bar}}
                         <!-- End Progress Box -->
                     </div>
                 </div>
@@ -119,26 +143,26 @@
                     <div class="row">
                         <div class="col-sm-3 sm-margin-b-30">
                             <div class="text-right sm-text-left">
-                                <h2 class="margin-b-0">{{page.section2.title}}</h2>
-                                <p>{{page.section2.desc}}</p>
+                                <h2 class="margin-b-0">{{page.experience_section.title}}</h2>
+                                <p>{{page.experience_section.desc}}</p>
                             </div>
                         </div>
                         <div class="col-sm-8 col-sm-offset-1">
                             <div class="row row-space-2 margin-b-4">
-								{{#page.section2.explist}}
+								{{#page.experience_section.skill_list}}
 									<div class="col-md-4 md-margin-b-4">
-										<div class="{{class1}}" data-height="height"  data-wow-duration="{{dur}}" data-wow-delay="{{delay}}">
+										<div class="service skill-box" data-height="height">
 											<div class="service-element">
-												<i class="{{class2}}"></i>
+												<i class="service-icon icon-chemistry"></i>
 											</div>
 											<div class="service-info">
-												<h3 class="{{class4}}">{{text}}</h3>
-												<p class="{{class3}}">{{sub}}</p>
+												<h3>{{text}}</h3>
+												<p class="margin-b-5">{{description}}</p>
 											</div>
 											<a href="#" class="content-wrapper-link"></a>    
 										</div>
 									</div>
-								{{/page.section2.explist}}
+								{{/page.experience_section.skill_list}}
                             </div>
                             <!--// end row -->
                         </div>
@@ -155,8 +179,8 @@
                 <div class="row">
                     <div class="col-sm-3 sm-margin-b-30">
                         <div class="text-right sm-text-left">
-                            <h2 class="margin-b-0">{{page.section3.title}}</h2>
-                            <p>{{page.section3.sub}}</p>
+                            <h2 class="margin-b-0">{{page.work_section.title}}</h2>
+                            <p>{{page.work_section.sub}}</p>
                         </div>
                     </div>
                     <div class="col-sm-8 col-sm-offset-1">
@@ -165,7 +189,7 @@
                             <div class="masonry-grid-sizer col-xs-6 col-sm-6 col-md-1"></div>
 
 							{{#projects}}
-								<div class="{{class}}">
+								<div class="masonry-grid-item col-xs-12 col-sm-6 col-md-4">
 									<!-- Work -->
 									<div class="work work-popup-trigger">
 										<div class="work-overlay">
@@ -173,28 +197,14 @@
 										</div>
 										<div class="work-popup-overlay">
 											<div class="work-popup-content">
-												<a href="javascript:void(0);" class="work-popup-close">{{menu}}</a>
+												<a href="javascript:void(0);" class="work-popup-close">Hide</a>
 												<div class="margin-b-30">
 													<h3 class="margin-b-5">{{name}}</h3>
-													<span>{{sub}}</span>
 												</div>
 												<div class="row">
 													<div class="col-sm-8 work-popup-content-divider sm-margin-b-20">
 														<div class="margin-t-10 sm-margin-t-0">
 															<p>{{description}}</p>
-															<p>{{desc2}}</p>
-															<ul class="list-inline work-popup-tag">
-																{{#tag}}
-																	<li class="work-popup-tag-item"><a class="work-popup-tag-link" href="#">{{text}}</a></li>
-																{{/tag}}
-															</ul>
-														</div>
-													</div>
-													<div class="col-sm-4">
-														<div class="margin-t-10 sm-margin-t-0">
-															{{#exp}}
-																<p class="margin-b-5"><strong>{{pos}}</strong> {{name}}</p>
-															{{/exp}}
 														</div>
 													</div>
 												</div>
@@ -220,18 +230,28 @@
                     <div class="row">
                         <div class="col-sm-3 sm-margin-b-30">
                             <div class="text-right sm-text-left">
-                                <h2 class="margin-b-0">{{page.section4.title}}</h2>
-                                <p>{{page.section4.sub}}</p>
+                                <h2 class="margin-b-0">{{page.contact_section.title}}</h2>
+                                <p>{{page.contact_section.sub}}</p>
                             </div>
                         </div>
                         <div class="col-sm-8 col-sm-offset-1">
                             <div class="row">
-								{{#page.section4.list}}
-									<div class="{{class}}">
-										<h5>{{text}}</h5>
-										<a href="{{href}}">{{link}}</a>
-									</div>
-								{{/page.section4.list}}
+                                <div class="col-md-3 col-xs-6 md-margin-b-30">
+                                    <h5>{{page.contact_section.address.label}}</h5>
+                                    <span>{{page.contact_section.address.text}}</span>
+                                </div>
+                                <div class="col-md-3 col-xs-6 md-margin-b-30">
+                                    <h5>{{page.contact_section.phone.label}}</h5>
+                                    <span>{{page.contact_section.phone.text}}</span>
+                                </div>
+                                <div class="col-md-3 col-xs-6 md-margin-b-30">
+                                    <h5>{{page.contact_section.email.label}}</h5>
+                                    <span>{{page.contact_section.email.text}}</span>
+                                </div>
+                                <div class="col-md-3 col-xs-6 md-margin-b-30">
+                                    <h5>{{page.contact_section.website.label}}</h5>
+                                    <span>{{page.contact_section.website.text}}</span>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -247,7 +267,7 @@
             <div class="content container">
                 <div class="row">
                     <div class="col-xs-6">
-                        <img class="footer-logo" src="{{{page.global.logo2}}}" alt="Aircv Logo">
+                        <img class="footer-logo" src="{{{global.img_logo_footer}}}" alt="Aircv Logo">
                     </div>
                     <div class="col-xs-6 text-right sm-text-left">
                         <p class="margin-b-0"><a class="fweight-700" href="http://keenthemes.com/preview/aircv/">Aircv</a> Theme Powered by: <a class="fweight-700" href="http://www.keenthemes.com/">KeenThemes.com</a></p>
@@ -260,6 +280,9 @@
 
         <!-- Back To Top -->
         <a href="javascript:void(0);" class="js-back-to-top back-to-top">Top</a>
+
+        <!-- Vertex library for enabling site updates from https://www.vertex360.co -->
+        <script type="text/javascript" src="https://cdn.turbo360-dev.com/dist/vertex.min.js"></script>
 
         <!-- JAVASCRIPTS(Load javascripts at bottom, this will reduce page load time) -->
         <!-- CORE PLUGINS -->
