minify css and js

--- a/views/home.mustache
+++ b/views/home.mustache
@@ -17,6 +17,7 @@
 
     <!-- BODY -->
     <body id="body" data-spy="scroll" data-target=".header">
+        <div id="vertex-container">
 
         <!--========== HEADER ==========-->
         <header class="header navbar-fixed-top">
@@ -287,7 +288,7 @@
         <!--========== FOOTER ==========-->
         {{>footer}}
         <!--========== END FOOTER ==========-->
-
+        </div>
         <!-- Back To Top -->
         <a href="javascript:void(0);" class="js-back-to-top back-to-top">Top</a>
 
