--- a/views/partials/head.mustache
+++ b/views/partials/head.mustache
@@ -9,14 +9,8 @@
     <!-- GLOBAL MANDATORY STYLES -->
     <link href="https://fonts.googleapis.com/css?family=Hind:300,400,500,600,700" rel="stylesheet" type="text/css">
     <link href="vendor/simple-line-icons/css/simple-line-icons.css" rel="stylesheet" type="text/css"/>
-    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css"/>
-
-    <!-- PAGE LEVEL PLUGIN STYLES -->
-    <link href="css/animate.css" rel="stylesheet">
-
-    <!-- THEME STYLES -->
-    <link href="css/layout.min.css" rel="stylesheet" type="text/css"/>
+    <link href="{{{cdn}}}/dist/css/style.min.css" rel="stylesheet">
 
     <!-- Favicon -->
-    <link rel="shortcut icon" href="favicon.ico"/>
+    <link rel="icon" href="{{{global.img_favicon}}}=s32-c" type="image/png" />
 </head>
