update vertex logo

--- a/views/partials/footer.mustache
+++ b/views/partials/footer.mustache
@@ -5,7 +5,7 @@
                 <img class="footer-logo" src="{{{global.img_logo_footer}}}" alt="Aircv Logo">
             </div>
             <div class="col-xs-6 text-right sm-text-left">
-                <p class="margin-b-0"><a class="fweight-700" href="http://keenthemes.com/preview/aircv/">Aircv</a> Theme Powered by: <a class="fweight-700" href="http://www.keenthemes.com/">KeenThemes.com</a></p>
+                <p class="vertex"><a href="https://www.vertex360.co/" target="_blank"><img src="https://lh3.googleusercontent.com/vCmw80CCjVCJBvOgO7MgN6qiYO7WwarQiWVKUd1xsdaOLTxnvBmShQLcVvvOpXuFlQ0t_uJvr_JsdGh8ngEY5A9OLQ"/></a></p>
             </div>
         </div>
         <!--// end row -->
