--- a/views/home.mustache
+++ b/views/home.mustache
@@ -34,7 +34,7 @@
                         <!-- Logo -->
                         <div class="logo">
                             <a class="logo-wrap" href="#body">
-                                <img class="logo-img logo-img-main" src="{{{global.img_logo_header}}}" alt="Logo">
+                                <img class="logo-img logo-img-main" src="{{{global.img_logo_nav}}}" alt="Logo">
                                 <img class="logo-img logo-img-active" src="{{{global.img_logo_footer}}}" alt="Logo">
                             </a>
                         </div>
